--- a/app/components/fines_table.templ
+++ b/app/components/fines_table.templ
@@ -53,6 +53,7 @@ templ FinesTable(cards []types.DatabaseCard) {
 									<td>
 										{ lib.ReplaceUnderscoresWithSpaces(card.Type) }
 									</td>
+									<td></td>
 									<td>
 										<svg
 											xmlns="http://www.w3.org/2000/svg"
@@ -76,12 +77,12 @@ templ FinesTable(cards []types.DatabaseCard) {
 									<td>
 										{ lib.ReplaceUnderscoresWithSpaces(card.Type) }
 									</td>
-									if card.NominatorTeamID != 0 {
+									if card.NominatorTeamID != 0 && card.Type != "reverse" {
 										<td><button class="btn btn-xs btn-outline btn-primary">reverse</button></td>
 									} else {
 										<td><button class="btn  btn-xs btn-disabled" tabindex="-1" role="button" aria-disabled="true">reverse</button></td>
 									}
-									<td><button class="btn btn-xs btn-outline btn-accent">submit</button></td>
+									<td><button class="btn btn-xs btn-outline btn-accent" onclick="submissionModal.showModal()" value={ card.CardHash } hx-post="/app/submit_preview" hx-target="#submissionModal" name="cardHash">submit</button></td>
 								</tr>
 							}
 						}
@@ -90,8 +91,5 @@ templ FinesTable(cards []types.DatabaseCard) {
 			</div>
 		}
 	</div>
+	<dialog id="submissionModal" class="modal"></dialog>
 }
-
-// <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-//   <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-// </svg>
