Add nomination functionality; implement single and random nomination modals and update styles

--- a/app/components/fines_table.templ
+++ b/app/components/fines_table.templ
@@ -31,6 +31,23 @@ templ FinesTable(cards []types.DatabaseCard) {
 				</svg>
 				<span>No outstanding cards</span>
 			</div>
+		} else if len(cards) >=2 {
+			<div role="alert" class="alert bg-error">
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					class="h-6 w-6 shrink-0 stroke-current"
+					fill="none"
+					viewBox="0 0 24 24"
+				>
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						stroke-width="2"
+						d="M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z"
+					></path>
+				</svg>
+				<span>You have been suspended!</span>
+			</div>
 		} else {
 			<div class="overflow-x-auto w-72 rounded-lg font-small-text">
 				<table class="table table-xs">
