--- a/app/components/statbar.templ
+++ b/app/components/statbar.templ
@@ -2,7 +2,7 @@ package components
 
 import "strconv"
 
-templ Statbar(gw int, manager, team string, isWinner bool) {
+templ Statbar(gw int, manager, team string, isWinner, Nominated bool) {
 	<div class="flex flex-col">
 		<div class="stats shadow mt-5 mb-2  w-72">
 			<div class="stat place-items-center">
@@ -26,7 +26,7 @@ templ Statbar(gw int, manager, team string, isWinner bool) {
 				<div class="stat-desc">{ team }</div>
 			</div>
 		</div>
-		if isWinner {
+		if isWinner && !Nominated {
 			<div class="join mb-5">
 				<button class="btn btn-secondary btn-outline  join-item" onclick="singleNominate.showModal()" hx-get="/app/single_nomination" hx-target="#singleNominate">
 					Nominate
