--- a/app/components/league_table.templ
+++ b/app/components/league_table.templ
@@ -8,8 +8,8 @@ import (
 templ LeagueTable(leagueRows []types.LeagueStandingRow, gameweek int) {
 	<div class="w-72 rounded-lg">
 		<p class="font-bold text-base-content">League Standings</p>
-		<div class="overflow-x-scroll h-96 w-full min-h-0 rounded-md">
-			<table class="table table-xs table-pin-rows w-full">
+		<div class="overflow-x-scroll h-96 w-full min-h-0 rounded-md font-small-text">
+			<table class="table table-xs table-pin-rows w-full ">
 				<!-- head -->
 				<thead>
 					<tr class="bg-secondary text-primary-content font-bold">
