--- a/app/views/rules.templ
+++ b/app/views/rules.templ
@@ -1,8 +1,58 @@
 package views
 
 templ Rules() {
-	<div>
-		<h1>Rules</h1>
-		<p>Here are the rules</p>
+	<div class="container mx-auto px-4 py-12 max-w-3xl">
+		<h1 class="text-4xl font-bold mb-8 text-center">Rules</h1>
+		<div class="space-y-4">
+			<div class="collapse collapse-plus bg-neutral rounded-lg">
+				<input type="radio" name="my-accordion-3" checked="checked"/>
+				<div class="collapse-title text-xl font-medium">Overview</div>
+				<div class="collapse-content">
+					<p class="text-base leading-relaxed font-small-text">OffsideFPL is a higher stakes version of FPL where managers compete each game week to knock each other down the leaderboard and avoid suspension.</p>
+				</div>
+			</div>
+			<div class="collapse collapse-plus bg-neutral rounded-lg">
+				<input type="radio" name="my-accordion-3"/>
+				<div class="collapse-title text-xl font-medium">Cards</div>
+				<div class="collapse-content space-y-4">
+					<p class="text-base leading-relaxed font-small-text">Managers will pick up cards for a number of reasons throughout the season, you can hold a yellow card as long as you like without any consequence but if you pick up a second yellow you will miss the following gameweek. After missing a game week, your cards are cleared. You can clear a yellow card on your own by submitting a fine of sorts (this can be whatever you want: £££, down a beer etc...). Your admin will get a prompt to approve your submission once you submit on app. How you prove this to your admin is up to you, it could be a proof of payment, video to a group chat etc...</p>
+					<div class="mt-4">
+						<p class="text-base mb-2 font-small-text">You can pick up a card in the following ways:</p>
+						<ul class="list-disc pl-6 space-y-2 font-small-text">
+							<li>One of the players in your starting 11 misses a penalty.</li>
+							<li>One of the players in your starting 11 scores an own goal.</li>
+							<li>One of the players in your starting 11 gets a red card.</li>
+							<li>You are nominated by the winner of the game week.</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="collapse collapse-plus bg-neutral rounded-lg">
+				<input type="radio" name="my-accordion-3"/>
+				<div class="collapse-title text-xl font-medium">Nominations</div>
+				<div class="collapse-content space-y-4">
+					<p class="text-base leading-relaxed font-small-text">Each week the person who scored highest in the league will be allowed to nominate 1 person of their choice or 3 random people to give a yellow card to.</p>
+					<p class="text-base leading-relaxed font-small-text">When randomly picking 3 people it is possible to choose yourself - this is by design, more risk more reward.</p>
+					<p class="text-base leading-relaxed font-small-text">If you are clever with your choices you can pick a person that is already on a yellow to suspend them for the following week.</p>
+				</div>
+			</div>
+			<div class="collapse collapse-plus bg-neutral rounded-lg">
+				<input type="radio" name="my-accordion-3"/>
+				<div class="collapse-title text-xl font-medium">Reversals</div>
+				<div class="collapse-content space-y-4">
+					<p class="text-base leading-relaxed font-small-text">At the start of the season each player gets a "reversal card" which they can use to reverse a nomination back to the person that gave it to them.</p>
+					<p class="text-base leading-relaxed font-small-text">Reversals can't be reversed.</p>
+					<p class="text-base leading-relaxed font-small-text">Multiple reversals can be applied to the same person in the case of a random nomination.</p>
+					<p class="text-base leading-relaxed font-small-text">As with the nominations, you can suspend the nominator if you plan your reversal or coordinate with another nominee.</p>
+				</div>
+			</div>
+			<div class="collapse collapse-plus bg-neutral rounded-lg">
+				<input type="radio" name="my-accordion-3"/>
+				<div class="collapse-title text-xl font-medium">Admins</div>
+				<div class="collapse-content">
+					<p class="text-base leading-relaxed font-small-text">When signing up, if you are linking a league that has never been linked you will become the admin of that league. When players submit their fines, you will need to approve them in order for them to be cleared.</p>
+				</div>
+			</div>
+		</div>
 	</div>
 }
