Add About page and update menu; implement AboutGet handler and link in navigation

--- a/app/views/rules.templ
+++ b/app/views/rules.templ
@@ -56,3 +56,35 @@ templ Rules() {
 		</div>
 	</div>
 }
+
+templ About() {
+	<div class="container mx-auto px-4 py-12 max-w-3xl">
+		<h1 class="text-4xl font-bold mb-8 text-center">About</h1>
+		<div class="space-y-4">
+			<div class="collapse collapse-plus bg-neutral rounded-lg">
+				<input type="radio" name="my-accordion-3" checked="checked"/>
+				<div class="collapse-title text-xl font-medium">Contributions</div>
+				<div class="collapse-content">
+					<p class="text-base leading-relaxed font-small-text">If you would like to contribute to OffsideFPL or create your own version you can find the repository <a class="link link-primary" href="https://github.com/Connorrmcd6/offsidefpl" target="_blank">here</a>.</p>
+				</div>
+			</div>
+			<div class="collapse collapse-plus bg-neutral rounded-lg">
+				<input type="radio" name="my-accordion-3"/>
+				<div class="collapse-title text-xl font-medium">Reporting Bugs/Issues</div>
+				<div class="collapse-content space-y-4">
+					<p class="text-base leading-relaxed font-small-text">This app is a hobby project and is maintained free of charge, it is likely that you will find bugs. Please report them <a class="link link-primary" href="https://github.com/Connorrmcd6/offsidefpl/issues" target="_blank">here</a>.</p>
+				</div>
+			</div>
+			<div class="collapse collapse-plus bg-neutral rounded-lg">
+				<input type="radio" name="my-accordion-3"/>
+				<div class="collapse-title text-xl font-medium">Background</div>
+				<div class="collapse-content space-y-4">
+					<p class="text-base leading-relaxed font-small-text">Back in the 2021/22 season our mini league was suffering from neglect. A number of our managers had lost interest and became unengaged. So we started thinking, how could we make the game more fast paced and fun?</p>
+					<p class="text-base leading-relaxed font-small-text">That was when we came up with YNDA (You'll never drink alone) - it was very similar to OffsideFPL where there was a weekly winner, who would nominate, and the nominees would have to send a video to the group chat of them downing a beer.</p>
+					<p class="text-base leading-relaxed font-small-text">This was definetely better than nothing, but we still had a few unengaged managers that ended up with a long list of incomplete drinks by the end of the season that seems too overwhelming to even try finish.</p>
+					<p class="text-base leading-relaxed font-small-text">OffsideFPL is the next attempt at making FPL fun again. By introducing a card system we eliminate the possibily of an endless drinks list, allowing managers to re-engage after a drop off.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+}
