--- a/app/views/rules.templ
+++ b/app/views/rules.templ
@@ -85,6 +85,36 @@ templ About() {
 					<p class="text-base leading-relaxed font-small-text">OffsideFPL is the next attempt at making FPL fun again. By introducing a card system we eliminate the possibily of an endless drinks list, allowing managers to re-engage after a drop off.</p>
 				</div>
 			</div>
+			<div class="collapse collapse-plus bg-neutral rounded-lg">
+				<input type="radio" name="my-accordion-3"/>
+				<div class="collapse-title text-xl font-medium">FAQ</div>
+				<div class="collapse-content space-y-4">
+					<div>
+						<p class="text-base leading-relaxed font-small-text font-bold">Can I play OffsideFPL for multiple leagues?</p>
+						<p class="text-base leading-relaxed font-small-text">Unfortunately, not yet. This feature is under consideration for future updates.</p>
+					</div>
+					<div>
+						<p class="text-base leading-relaxed font-small-text font-bold">I can't reverse a card?</p>
+						<p class="text-base leading-relaxed font-small-text">This is likely because it is not a nomination, eg one of your players missed a penalty, in this case there is no one to reverse it too. Or you have already used your reverse this season.</p>
+					</div>
+					<div>
+						<p class="text-base leading-relaxed font-small-text font-bold">What happens when a player on a red gets another card?</p>
+						<p class="text-base leading-relaxed font-small-text">If the player has not served their suspension, the additional card will be nullified.</p>
+					</div>
+					<div>
+						<p class="text-base leading-relaxed font-small-text font-bold">The gameweek is over but I can't nominate?</p>
+						<p class="text-base leading-relaxed font-small-text">We have to wait for FPL to finish updating everything on their end before we can update on our end. Check back on the hour for updates.</p>
+					</div>
+					<div>
+						<p class="text-base leading-relaxed font-small-text font-bold">The admin did not approve my submission before I got another card?</p>
+						<p class="text-base leading-relaxed font-small-text">Take it up with the admin.</p>
+					</div>
+					<div>
+						<p class="text-base leading-relaxed font-small-text font-bold">The standings are very different to FPL?</p>
+						<p class="text-base leading-relaxed font-small-text">This is likely due to people being suspended and missing a whole week of points.</p>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 }
