--- a/app/components/fines_table.templ
+++ b/app/components/fines_table.templ
@@ -91,7 +91,7 @@ templ FinesTable(cards []types.TableCard) {
 										{ lib.ReplaceUnderscoresWithSpaces(card.Type) }
 									</td>
 									if card.NominatorTeamID != 0 && card.Type != "reverse" && card.UserHasReverse {
-										<td><button class="btn btn-xs btn-outline btn-primary" onclick="reverseModal.showModal()" value={ card.Type } hx-post="/app/reverse_preview" hx-target="#reverseModal" name="cardHash">reverse</button></td>
+										<td><button class="btn btn-xs btn-outline btn-primary" onclick="reverseModal.showModal()" value={ card.CardHash } hx-post="/app/reverse_preview" hx-target="#reverseModal" name="cardHash">reverse</button></td>
 									} else {
 										<td><button class="btn  btn-xs btn-disabled" tabindex="-1" role="button" aria-disabled="true">reverse</button></td>
 									}
