--- a/auth/login.templ
+++ b/auth/login.templ
@@ -9,10 +9,27 @@ templ Login(form LoginFormValue, err error) {
 }
 
 templ LoginForm(form LoginFormValue, err error) {
-	<div id="login-form" class="relative isolate overflow-hidden bg-base-200 flex justify-center items-center h-screen">
+	<div id="login-form" class="relative isolate overflow-hidden bg-base-200 flex  flex-col justify-center items-center h-screen">
 		<form method="POST" action="/auth/login" hx-boost="true">
 			<div class="card bg-base-100 w-96 shadow-xl">
 				<div class="card-body">
+					<a alt="logo" class="btn btn-ghost normal-case px-2 sm:px-4">
+						<img
+							src="/public/icon.png"
+							class="h-8 w-auto sm:h-10 md:h-12 object-contain"
+							alt="OffsideFPL Logo"
+						/>
+						<span
+							class="text-base-content font-bold text-lg sm:text-xl md:text-3xl truncate
+			[&::selection]:text-base-content relative col-start-1 row-start-1 
+			bg-[linear-gradient(90deg,theme(colors.error)_0%,theme(colors.secondary)_9%,theme(colors.secondary)_42%,theme(colors.primary)_47%,theme(colors.accent)_100%)] 
+			bg-clip-text [-webkit-text-fill-color:transparent] 
+			[&::selection]:bg-blue-700/20 
+			[@supports(color:oklch(0%_0_0))]:bg-[linear-gradient(90deg,oklch(var(--s))_4%,color-mix(in_oklch,oklch(var(--s)),oklch(var(--er)))_22%,oklch(var(--p))_45%,color-mix(in_oklch,oklch(var(--p)),oklch(var(--a)))_67%,oklch(var(--a))_100.2%)]"
+						>
+							OffsideFPL
+						</span>
+					</a>
 					<h2 class="card-title base-content">Login</h2>
 					<input
 						type="text"
@@ -55,5 +72,22 @@ templ LoginForm(form LoginFormValue, err error) {
 				</div>
 			</div>
 		</form>
+		<button class="btn btn-accent btn-link" hx-get="/auth/learn" hx-target="#login-form" hx-swap="outerHTML">
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				class="h-6 w-6"
+				fill="none"
+				viewBox="0 0 24 24"
+				stroke="currentColor"
+			>
+				<path
+					stroke-linecap="round"
+					stroke-linejoin="round"
+					stroke-width="2"
+					d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
+				></path>
+			</svg>
+			Learn More
+		</button>
 	</div>
 }
