--- a/auth/register.templ
+++ b/auth/register.templ
@@ -40,7 +40,7 @@ templ RegisterForm(form RegisterFormValue, err error) {
 						class="input input-sm input-bordered w-full max-w-xs"
 					/>
 					<input
-						type="text"
+						type="password"
 						name="password"
 						id="password"
 						type="password"
@@ -49,7 +49,7 @@ templ RegisterForm(form RegisterFormValue, err error) {
 						class="input input-sm input-bordered w-full max-w-xs"
 					/>
 					<input
-						type="text"
+						type="password"
 						name="passwordRepeat"
 						id="passwordRepeat"
 						type="password"
@@ -75,9 +75,18 @@ templ RegisterForm(form RegisterFormValue, err error) {
 							<span>{ err.Error() }</span>
 						</div>
 					}
-					<div class="card-actions justify-end mt-5">
-						<button class="btn btn-sm btn-neutral btn-outline" hx-get="/auth/login" hx-target="#register-form" hx-swap="outerHTML">Login</button>
-						<button class="btn btn-sm btn-primary" type="submit">Register</button>
+					<div class="card-actions justify-end  mt-5">
+						<button
+							type="button"
+							class="btn btn-sm btn-neutral btn-outline"
+							hx-get="/auth/login"
+							hx-target="#register-form"
+							hx-swap="outerHTML"
+						>Login</button>
+						<button
+							type="submit"
+							class="btn btn-sm btn-primary"
+						>Register</button>
 					</div>
 				</div>
 			</div>
