Refactor button styles for consistency and add a link to the code repository in the Reversals template

--- a/auth/login.templ
+++ b/auth/login.templ
@@ -81,7 +81,7 @@ templ LoginForm(form LoginFormValue, err error) {
 				</div>
 			</div>
 		</form>
-		<button class="btn btn-accent btn-link" hx-get="/auth/learn" hx-target="#login-form" hx-swap="outerHTML">
+		<button class="btn btn-sm btn-accent btn-link" hx-get="/auth/learn" hx-target="#login-form" hx-swap="outerHTML">
 			<svg
 				xmlns="http://www.w3.org/2000/svg"
 				class="h-6 w-6"
