--- a/public/styles.css
+++ b/public/styles.css
@@ -1130,6 +1130,10 @@ video {
   transition-duration: 300ms;
 }
 
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .\[-webkit-text-fill-color\:transparent\] {
   -webkit-text-fill-color: transparent;
 }
