Add 'Stay logged in' feature to login and registration forms; update related logic and styles

--- a/auth/login.templ
+++ b/auth/login.templ
@@ -78,6 +78,12 @@ templ LoginForm(form LoginFormValue, err error) {
 							class="btn btn-sm btn-primary"
 						>Login</button>
 					</div>
+					<div class="form-control inline-flex justify-end w-fit ml-auto mt-5">
+						<label class="label cursor-pointer">
+							<input type="checkbox" name="stayLoggedIn" class="checkbox checkbox-sm mr-2"/>
+							<span class="label-text text-xs">Stay logged in</span>
+						</label>
+					</div>
 				</div>
 			</div>
 		</form>
