--- a/auth/register.templ
+++ b/auth/register.templ
@@ -88,6 +88,12 @@ templ RegisterForm(form RegisterFormValue, err error) {
 							class="btn btn-sm btn-primary"
 						>Register</button>
 					</div>
+					<div class="form-control inline-flex justify-end w-fit ml-auto mt-5">
+						<label class="label cursor-pointer">
+							<input type="checkbox" name="stayLoggedIn" class="checkbox checkbox-sm mr-2"/>
+							<span class="label-text text-xs">Stay logged in</span>
+						</label>
+					</div>
 				</div>
 			</div>
 		</form>
