Update league table card count logic and assets
- Changed card count thresholds from 2 to 4 for suspension status in ETL logic.
- Updated league table template to reflect new card count thresholds and added new beer SVG assets for different card counts (onebeer.svg, twobeer.svg, threebeer.svg, fourbeer.svg).
- Adjusted CSS to include a new margin class for better layout.
- Removed outdated dependencies from go.sum and updated testify to version 1.10.0.

--- a/app/components/league_table.templ
+++ b/app/components/league_table.templ
@@ -25,15 +25,23 @@ templ LeagueTable(leagueRows []types.LeagueStandingRow, gameweek int) {
 							<th>{ strconv.Itoa(row.Position) }</th>
 							<td>
 								<div>
-									<div class="font-bold flex flex-row">
+									<div class="font-bold flex flex-row items-center">
 										{ row.FirstName }
-										if row.CardCount >= 2 || row.IsSuspended {
+										if row.CardCount >= 4 || row.IsSuspended {
 											<a href="/path/to/your/image.svg" target="_blank">
-												<img src="/public/assets/yellowRed.svg" class="h-4 w-4" alt="Icon"/>
+												<img src="/public/assets/fourbeer.svg" class="h-4 ml-1" alt="Icon"/>
 											</a>
 										} else if row.CardCount == 1 {
 											<a href="/path/to/your/image.svg" target="_blank">
-												<img src="/public/assets/yellow.svg" class="h-4 w-4" alt="Icon"/>
+												<img src="/public/assets/onebeer.svg" class="h-4 ml-1" alt="Icon"/>
+											</a>
+										} else if row.CardCount == 2 {
+											<a href="/path/to/your/image.svg" target="_blank">
+												<img src="/public/assets/twobeer.svg" class="h-4 ml-1" alt="Icon"/>
+											</a>
+										} else if row.CardCount == 3 {
+											<a href="/path/to/your/image.svg" target="_blank">
+												<img src="/public/assets/threebeer.svg" class="h-4 ml-1" alt="Icon"/>
 											</a>
 										}
 									</div>
